<resources>
    <string name="app_name">Exzellenzkoch</string>
    <string name="register">Registrieren</string>
    <string name="email_address">Email Adresse</string>
    <string name="optional_user_id">Gib dir einen Nutzernamen (optional)</string>
    <string name="email_example">max.musterman@muster.de</string>
    <string name="password">Passwort</string>
    <string name="user_id">Nutzername</string>
    <string name="recipe_list_recipe_title">Meine Rezepte</string>
...
    <string name="textView_feed">Feed</string>
    <string name="feed_headline">Die neusten Rezepte</string>
    <string name="group_title_fragment">Gruppen</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="friend_title">Freunde</string>
    <string name="friend_requests">Freundschaftsanfragen</string>
    <string name="search_button">Suchen</string>
    <string name="enter_user_id">Gib dir einen Nutzernamen</string>
    <string name="admin_remove_item">Löschen</string>
    <string name="public_recipe_search_title">Suche ein Rezept</string>
    <string name="recipe_title">Titel des Rezeptes</string>

    <!--Strings übernommen von beispiel-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Exzellenz-Koch</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="open">Öffnen</string>
    <string name="feed">Feed</string>
    <string name="menu">Menü</string>
    <string name="write_sth_about_you_headline">Schreibe etwas über dich</string>
    <string name="i_like_cooking_hint">Ich koche gerne...</string>
    <string name="change_login_data">Login Daten ändern</string>
    <string name="save">Speichern</string>
    <string name="delete_profile">Profil löschen</string>
    <string name="savoury__tag">herzhaft</string>
    <string name="sweet_tag">süß</string>
    <string name="salty_tag">salzig</string>
    <string name="publish">veröffentlichen</string>
    <string name="ingredient_input_description">Schreibe jede Zutaten und Kapitel so auf:
...
